Fixed issue in phone where album covers where too big and leaking off of the screen

--- a/src/app/components/music/music.component.css
+++ b/src/app/components/music/music.component.css
@@ -1,3 +1,7 @@
 .player-space {
     margin-top: 60px;
 }
+.img-player-cover {
+    width:300px;
+    height:300px;
+}
